--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,12 @@
 *.iml
 .gradle
+build/
+captures/
+.externalNativeBuild/
+.cxx/
+*.apk
+output.json
+
 /local.properties
 /.idea/caches
 /.idea/libraries
@@ -7,9 +14,26 @@
 /.idea/workspace.xml
 /.idea/navEditor.xml
 /.idea/assetWizardSettings.xml
+/.idea/vcs.xml
+/.idea/deploymentTargetSelector.xml
+/.idea/deploymentTargetDropDown.xml
+/.idea/misc.xml
+/.idea/render.experimental.xml
 .DS_Store
 /build
 /captures
 .externalNativeBuild
 .cxx
 local.properties
+
+*.log
+
+# Keystore files
+*.jks
+*.keystore
+
+# Google Services (e.g. APIs or Firebase)
+google-services.json
+
+# Android Profiling
+*.hprof
