--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -20,6 +20,8 @@ runtimeAndroid= "1.6.8"
 #추가내용
 hilt = "2.48"
 activity = "1.9.1"
+legacySupportV4 = "1.0.0"
+fragmentKtx = "1.8.2"
 
 
 [libraries]
@@ -41,6 +43,8 @@ converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref
 
 androidx-runtime-android = { group = "androidx.compose.runtime", name = "runtime-android", version.ref = "runtimeAndroid" }
 androidx-activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
+androidx-legacy-support-v4 = { group = "androidx.legacy", name = "legacy-support-v4", version.ref = "legacySupportV4" }
+androidx-fragment-ktx = { group = "androidx.fragment", name = "fragment-ktx", version.ref = "fragmentKtx" }
 
 
 
