--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <application
         android:name = ".di.HiltApplication"
         android:allowBackup="true"
@@ -14,8 +16,8 @@
         android:theme="@style/Theme.YacTong"
         tools:targetApi="31">
         <meta-data
-            android:name="com.naver.maps.map.CLIENT_ID"
-            android:value="cimn27aj2e" />
+            android:name="com.kakao.sdk.AppKey"
+            android:value="d4ce3a86b1d0a8895e9eccdf9fb16fc4"/>
         <activity
             android:name=".ui.splash.SplashActivity"
             android:exported="false" />
