--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,7 @@
             android:exported="true"
             android:windowSoftInputMode="adjustResize"
             android:label="@string/app_name">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.DEFAULT" />
@@ -49,9 +50,22 @@
 
                 <data android:host="oauth"
                     android:scheme="d4ce3a86b1d0a8895e9eccdf9fb16fc4" />
-
             </intent-filter>
         </activity>
+
+        <activity
+            android:name="com.kakao.sdk.auth.AuthCodeHandlerActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data android:host="oauth"
+                    android:scheme="d4ce3a86b1d0a8895e9eccdf9fb16fc4" />
+            </intent-filter>
+        </activity>
+
     </application>
 
 </manifest>
