--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,10 @@
         android:theme="@style/Theme.YacTong"
         tools:targetApi="31">
         <activity
+            android:name="com.canhub.cropper.CropImageActivity"
+            android:theme="@style/Base.Theme.AppCompat"
+            />
+        <activity
             android:name=".ui.textrecognition.OCR_Activity"
             android:exported="false" />
 
