--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,7 +37,7 @@
             android:theme="@style/Base.Theme.AppCompat"
             />
         <activity
-            android:name=".ui.textrecognition.OCR_Activity"
+            android:name=".ui.textrecognition.OCRActivity"
             android:exported="false" />
 
 
